[gd_scene load_steps=6 format=3 uid="uid://biax8t0dyit12"]

[ext_resource type="Texture2D" uid="uid://baag2xepnsptr" path="res://assets/textures/screen_background.png" id="1_c5unq"]
[ext_resource type="Script" path="res://levels/screen.gd" id="1_wclfm"]
[ext_resource type="Texture2D" uid="uid://chsdv8qhb45f1" path="res://assets/textures/screen_pixel.png" id="2_nhm3c"]
[ext_resource type="Theme" uid="uid://byygbwn2llcjv" path="res://assets/fonts/screenTheme2.tres" id="4_g3hyf"]
[ext_resource type="PackedScene" uid="uid://ckacxkfej64m6" path="res://Scenes/Fade/Fade.tscn" id="5_14cog"]

[node name="Screen" type="Node2D"]
script = ExtResource("1_wclfm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c5unq")
expand_mode = 1

[node name="Pixels" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nhm3c")
stretch_mode = 1

[node name="ScreenText" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme = ExtResource("4_g3hyf")
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false

[node name="Fade" parent="." instance=ExtResource("5_14cog")]

[connection signal="fade_in_finished" from="Fade" to="." method="_on_fade_in_finished"]
[connection signal="fade_out_finished" from="Fade" to="." method="_on_fade_out_finished"]
